force-app/main/default/objects/StagingTable__c/StagingTable__c.object-meta.xml
<CustomObject>
    <label>StagingTable</label>
    <nameField>
        <label>StagingTable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StagingTables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>