force-app/main/default/objects/StagingTable__c/fields/isOrderable__c.field-meta.xml
<CustomField>
    <fullName>isOrderable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOrderable</label>
    <type>Checkbox</type>
</CustomField>