force-app/main/default/objects/StagingTable__c/fields/PriceList__c.field-meta.xml
<CustomField>
    <fullName>PriceList__c</fullName>
    <label>PriceList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>