force-app/main/default/objects/StagingTable__c/fields/Pricing_Element__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Element__c</fullName>
    <label>Pricing Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>