force-app/main/default/objects/StagingTable__c/fields/ProductSku__c.field-meta.xml
<CustomField>
    <fullName>ProductSku__c</fullName>
    <label>ProductSku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>