force-app/main/default/objects/StagingTable__c/fields/RecordStatus__c.field-meta.xml
<CustomField>
    <fullName>RecordStatus__c</fullName>
    <label>RecordStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>