force-app/main/default/objects/StagingTable__c/fields/StartDatePrice__c.field-meta.xml
<CustomField>
    <fullName>StartDatePrice__c</fullName>
    <label>StartDatePrice</label>
    <type>DateTime</type>
</CustomField>